Adds the IB OUtlets for the labels and views.

--- a/FunWithViews/Base.lproj/Main.storyboard
+++ b/FunWithViews/Base.lproj/Main.storyboard
@@ -109,6 +109,21 @@
                         </subviews>
                         <color key="backgroundColor" red="0.99835759400000001" green="0.146754194" blue="0.95299108389999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="bottomLeftView" destination="cUT-TC-iAG" id="lwn-Rn-Cr0"/>
+                        <outlet property="bottomRightView" destination="FSS-y2-AXV" id="FwO-ba-7VX"/>
+                        <outlet property="middleLeftView" destination="Wi6-9G-5Vo" id="qLW-QP-zmo"/>
+                        <outlet property="middleRightView" destination="ONn-Wo-J9i" id="gBU-PW-pSI"/>
+                        <outlet property="middleView" destination="Cb4-hC-Ccd" id="vVb-v0-fr8"/>
+                        <outlet property="scoreLabel1" destination="Qe0-1f-ju6" id="Qe5-Hk-TZB"/>
+                        <outlet property="scoreLabel2" destination="CfU-Ix-COZ" id="AcI-T2-mJN"/>
+                        <outlet property="scoreLabel3" destination="e3A-l3-js9" id="Nac-Z4-t97"/>
+                        <outlet property="scoreLabel4" destination="sp6-Wg-KqS" id="V8h-Op-ty1"/>
+                        <outlet property="scoreLabel5" destination="BZT-fb-ogR" id="3Xv-om-vue"/>
+                        <outlet property="scoreLabel6" destination="kko-Jo-Tp9" id="92j-Il-B9H"/>
+                        <outlet property="topLeftView" destination="UmJ-QV-gNb" id="20o-dd-TTr"/>
+                        <outlet property="topRightView" destination="HJf-5D-aW4" id="qIs-tm-Phs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
